k8s/base/app/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: community-api-svc
  namespace: app
  labels:
    app: community-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    app: community-api
