k8s/base/app/ws-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: community-ws-svc
  namespace: app
  labels:
    app: community-ws
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8001
      targetPort: 8001
  selector:
    app: community-ws
